#35 add web-interface option

--- a/meson.build
+++ b/meson.build
@@ -22,6 +22,10 @@ add_global_arguments('-DPJ_AUTOCONF=1', language : 'cpp')
 cc = meson.get_compiler('cpp')
 dep_json = dependency('json-c')
 dep_phonenumber = cc.find_library('phonenumber')
+# for pjproject
+dep_pthread = cc.find_library('pthread')
+dep_uuid = cc.find_library('libuuid')
+dep_openssl = dependency('openssl')
 
 subdir('third-party/pjproject')
 subdir('src')
