improve var name

--- a/meson.build
+++ b/meson.build
@@ -22,7 +22,7 @@ add_global_arguments('-DPJ_AUTOCONF=1', language : 'cpp')
 cc = meson.get_compiler('cpp')
 dep_json = dependency('json-c')
 dep_phonenumber = cc.find_library('phonenumber')
-deps_pjproject = [
+deps_for_pjproject = [
   cc.find_library('pthread'),
   cc.find_library('libuuid'),
   dependency('openssl')
