#43 add webpack support

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -2,6 +2,12 @@ option(
   'web-interface',
   type: 'boolean',
   value: true,
-  description: 'build and install web-interface'
+  description: 'install web-interface'
+)
+option(
+  'web-interface-build',
+  type: 'boolean',
+  value: false,
+  description: 'build web-interface'
 )
 
