--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -17,8 +17,10 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - run: cd usr/var/www/callblocker
     - run: npm install
     - run: npm run build --if-present
     - run: npm test
       env:
         CI: true
+
