--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -4,23 +4,31 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [10.x, 12.x]
-
     steps:
     - uses: actions/checkout@v1
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: cd usr/var/www/callblocker
-    - run: npm install
-    - run: npm run build --if-present
-    - run: npm test
       env:
         CI: true
+
+    - name: Install dependencies
+      working-directory: usr/var/www/callblocker
+      run: |
+        npm install
+
+    - name: Build
+      working-directory: usr/var/www/callblocker
+      run: |
+        npm run build
+
+    - name: Test
+      working-directory: usr/var/www/callblocker
+      run: |
+        npm test
 
