--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -4,10 +4,13 @@ on: [push]
 
 jobs:
   build:
+    # docker executor
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
         node-version: [10.x, 12.x]
+
     steps:
     - uses: actions/checkout@v1
 
