--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,4 +18,10 @@ jobs:
     - name: Install dependencies for callblockerd
       run: |
         apt-get update
+        apt-get install --no-install-recommends -y \
+          dpkg-dev pkg-config \
+          ninja-build g++ \
+          libjson-c-dev libphonenumber-dev uuid-dev libssl-dev \
+          python3 python3-bs4 python3-ldif3 python3-vobject python3-pip
+        pip3 install meson
 
