#40 start with full ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,9 +35,10 @@ jobs:
         apt-get install --no-install-recommends -y \
           nodejs
 
+    # TODO: use /usr/local here
     - name: Build all
       run: |
-        /usr/local/bin/meson --prefix=/usr --sysconfdir=/etc --localstatedir=/usr/var build
+        /usr/local/bin/meson --prefix=/usr --sysconfdir=/etc --localstatedir=/usr/var -Dweb-interface-build=true build
         cd build && ninja
 
     - name: Unit test
