#40 meson in buster in new enough

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,8 +23,7 @@ jobs:
           ninja-build g++ \
           libjson-c-dev libphonenumber-dev uuid-dev libssl-dev \
           python3 python3-bs4 python3-ldif3 python3-vobject \
-          python3-pip python3-setuptools
-        pip3 install meson
+          meson
 
     - name: Install build dependencies for Web interface
       run: |
