--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,13 +22,12 @@ jobs:
           dpkg-dev pkg-config \
           ninja-build g++ \
           libjson-c-dev libphonenumber-dev uuid-dev libssl-dev \
-          python3 python3-bs4 python3-ldif3 python3-vobject \
           meson
 
     - name: Install build dependencies for Web interface
       run: |
         apt-get install --no-install-recommends -y \
-          wget
+          ca-certificates wget
         wget -qO- https://deb.nodesource.com/setup_12.x | bash -
         apt-get update
         apt-get install --no-install-recommends -y \
