#47 start debian build ci support

--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
         apt-get update
         apt-get install --no-install-recommends -y \
-          dpkg-dev pkg-config \
+          debhelper dpkg-dev pkg-config \
           ninja-build g++ \
           libjson-c-dev libphonenumber-dev uuid-dev libssl-dev \
           meson
