--- a/debian/control
+++ b/debian/control
@@ -17,7 +17,7 @@ Maintainer: Patrick Ammann <pammann@gmx.net>
 Homepage: https://github.com/pamapa/callblocker
 
 Package: callblocker
-Architecture: amd64
+Architecture: any
 Depends:
   python3,
   python3-bs4,
