--- a/debian/rules
+++ b/debian/rules
@@ -11,6 +11,6 @@ include /usr/share/dpkg/pkg-info.mk
 
 override_dh_auto_configure:
 	dh_auto_configure -- \
-		--prefix=/usr --sysconfdir=/etc --localstatedir=/usr/var \
+		--localstatedir=/usr/var \
 		-Dweb-interface-build=true
 
