--- a/usr/var/www/meson.build
+++ b/usr/var/www/meson.build
@@ -1,27 +1,25 @@
 if get_option('web-interface')
-  if get_option('web-interface-build')
-    message('build web-interface...')
-    path_package_json = join_paths(meson.source_root(), 'usr/var/www/callblocker')
-    # fetch js files
-    res = run_command('sh', '-c',
-                      'cd @0@ && npm install'.format(path_package_json)
-    )
-    if res.returncode() != 0
-      error('npm install failed with @0@'.format(res.stderr()))
-    endif
-    # patch version in js file
-    app_js = join_paths(path_package_json, 'js/app.js')
-    message('set version @0@ in @1@'.format(meson.project_version(), app_js))
-    run_command('sh', '-c',
-                'sed -i \'s/content: "v.*"/content: "v@0@"/g\' @1@'.format(meson.project_version(), app_js))
-    # build bundle
-    res = run_command('sh', '-c',
-                      'cd @0@ && npm run build'.format(path_package_json)
-    )
-    if res.returncode() != 0
-      error('npm run build failed with @0@'.format(res.stderr()))
-    endif
+  message('build web-interface...')
+  path_package_json = join_paths(meson.source_root(), 'usr/var/www/callblocker')
+  # fetch js files
+  res = run_command('sh', '-c',
+                    'cd @0@ && npm install'.format(path_package_json)
+  )
+  if res.returncode() != 0
+    error('npm install failed with @0@'.format(res.stderr()))
   endif
+  # patch version in js file
+  app_js = join_paths(path_package_json, 'src/app.js')
+  message('set version @0@ in @1@'.format(meson.project_version(), app_js))
+  run_command('sh', '-c',
+              'sed -i \'s/content: "v.*"/content: "v@0@"/g\' @1@'.format(meson.project_version(), app_js))
+  # build bundle
+  res = run_command('sh', '-c',
+                    'cd @0@ && npm run build'.format(path_package_json)
+  )
+  if res.returncode() != 0
+    error('npm run build failed with @0@'.format(res.stderr()))
+endif
 
   install_subdir(
     'callblocker',
