--- a/debian/control
+++ b/debian/control
@@ -19,10 +19,10 @@ Homepage: https://github.com/pamapa/callblocker
 Package: callblocker
 Architecture: any
 Depends:
- libjson-c,
- libphonenumber,
+ libjson-c3,
+ libphonenumber7,
  uuid,
- libssl,
+ libssl2,
  python3,
  python3-bs4,
  python3-ldif3,
