--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   build:
-    name: Build using ${{ matrix.arch }} / ${{ matrix.debian-version }}
+    name: Build for ${{ matrix.arch }} / ${{ matrix.debian-version }}
 
     # docker executor
     runs-on: ubuntu-latest
