--- a/debian/rules
+++ b/debian/rules
@@ -4,10 +4,8 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-include /usr/share/dpkg/pkg-info.mk
-
 %:
-	dh $@ --parallel --buildsystem=meson
+	dh $@ --parallel --buildsystem=meson --with systemd
 
 override_dh_auto_configure:
 	dh_auto_configure -- \
