--- a/etc/systemd/system/meson.build
+++ b/etc/systemd/system/meson.build
@@ -1,2 +1,8 @@
-install_data(['callblockerd.service'],
-             install_dir: join_paths(path_sysconfdir, 'systemd', 'system'))
+# else: debhelper/dh_systemd takes care (see debian/callblocker.service)
+if get_option('install-custom')
+  install_data(
+    ['callblockerd.service'],
+    install_dir: join_paths(path_sysconfdir, 'systemd', 'system')
+  )
+endif
+
