--- a/debian/control
+++ b/debian/control
@@ -19,10 +19,7 @@ Homepage: https://github.com/pamapa/callblocker
 Package: callblocker
 Architecture: any
 Depends:
- libjson-c3,
- libphonenumber7,
- uuid,
- libssl1.1,
+ ${shlibs:Depends},
  python3,
  python3-bs4,
  python3-ldif3,
