--- a/debian/rules
+++ b/debian/rules
@@ -5,12 +5,12 @@
 #export DH_VERBOSE=1
 
 %:
-	dh $@ --parallel --buildsystem=meson --with systemd
+	dh $@ --parallel --buildsystem=meson --with=systemd
 
 override_dh_auto_configure:
 	dh_auto_configure -- \
 		--localstatedir=/usr/var \
-		-Dweb-interface=true
+		-Dinstall-custom=false -Dweb-interface=true
 
 # allow access from Web interface
 override_dh_fixperms:
