--- a/.github/workflows/raspbian.yml
+++ b/.github/workflows/raspbian.yml
@@ -44,7 +44,7 @@ jobs:
     - name: Build package
       run: |
         CONFIG_SITE=/etc/dpkg-cross/cross-config.armhf DEB_BUILD_OPTIONS=nocheck \
-          dpkg-buildpackage -b -uc -aarmhf
+          dpkg-buildpackage -b -uc -aarmhf -Pcross,nocheck
         mkdir -p artifacts
         cp ../callblocker_* artifacts
 
