--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -29,7 +29,7 @@ jobs:
           debhelper build-essential \
           dpkg-dev pkg-config \
           ninja-build meson \
-          g++ \
+          g++ gcc \
           libjson-c-dev libphonenumber-dev uuid-dev libssl-dev
 
     - name: Install build dependencies for web-interface
