--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -28,9 +28,11 @@ jobs:
         apt-get install --no-install-recommends -y \
           debhelper build-essential \
           dpkg-dev pkg-config \
-          ninja-build meson \
+          ninja-build \
+          python3-pip \
           g++ gcc \
           libjson-c-dev libphonenumber-dev uuid-dev libssl-dev
+        pip3 install meson
 
     - name: Install build dependencies for web-interface
       run: |
