--- a/.github/workflows/raspbian.yml
+++ b/.github/workflows/raspbian.yml
@@ -28,9 +28,11 @@ jobs:
         apt-get install --no-install-recommends -y \
           debhelper build-essential crossbuild-essential-armhf \
           dpkg-dev pkg-config \
-          ninja-build meson \
+          python3-pip \
+          ninja-build \
           g++-arm-linux-gnueabihf gcc-arm-linux-gnueabihf \
           libjson-c-dev:armhf libphonenumber-dev:armhf uuid-dev:armhf libssl-dev:armhf
+        pip3 install meson
 
     - name: Install build dependencies for web-interface
       run: |
@@ -41,22 +43,18 @@ jobs:
         apt-get install --no-install-recommends -y \
           nodejs
 
-    - name: Build pjproject
-      run: |
-        cd third-party/pjproject
-        export CONFIG_SITE=/etc/dpkg-cross/cross-config.armhf
-        export CROSS_COMPILE=arm-linux-gnueabihf-
-        export PJPROJECT_CONFIGURE_OPTS=--host=arm-linux-gnueabihf
-        ./prepare.sh
+#    - name: Build pjproject
+#      run: |
+#        cd third-party/pjproject
+#        export CONFIG_SITE=/etc/dpkg-cross/cross-config.armhf
+#        export CROSS_COMPILE=arm-linux-gnueabihf-
+#        export PJPROJECT_CONFIGURE_OPTS="--host=arm-linux-gnueabihf --target=arm7hlf-unknown-linux-gnueabihf"
+#        ./prepare.sh
 
     - name: Build package
       run: |
-        echo "1"
-        echo $CONFIG_SITE
-        echo "2"
-        CONFIG_SITE=/etc/dpkg-cross/cross-config.armhf
-        DEB_BUILD_OPTIONS=nocheck
-        dpkg-buildpackage -b -uc -aarmhf -Pcross,nocheck
+        export CONFIG_SITE=/etc/dpkg-cross/cross-config.armhf
+        dpkg-buildpackage -b -uc -a armhf -d
         mkdir -p artifacts
         cp ../callblocker_* artifacts
 
