--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -29,7 +29,7 @@ jobs:
           debhelper build-essential \
           dpkg-dev pkg-config \
           ninja-build \
-          python3-pip \
+          python3-pip python3-setuptools \
           g++ gcc \
           libjson-c-dev libphonenumber-dev uuid-dev libssl-dev
         pip3 install meson
