--- a/.github/workflows/raspbian.yml
+++ b/.github/workflows/raspbian.yml
@@ -28,7 +28,7 @@ jobs:
         apt-get install --no-install-recommends -y \
           debhelper build-essential crossbuild-essential-armhf \
           dpkg-dev pkg-config \
-          python3-pip \
+          python3-pip python3-setuptools \
           ninja-build \
           g++-arm-linux-gnueabihf gcc-arm-linux-gnueabihf \
           libjson-c-dev:armhf libphonenumber-dev:armhf uuid-dev:armhf libssl-dev:armhf
