--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -32,9 +32,8 @@ jobs:
           python3-pip python3-setuptools python3-wheel \
           g++ gcc \
           libjson-c-dev libphonenumber-dev uuid-dev libssl-dev
-        pip3 install meson
+        pip3 install meson==0.50.1
         meson -v
-        whereis meson
 
     - name: Install build dependencies for web-interface
       run: |
