rename: test -> tests, doc -> docs

--- a/meson.build
+++ b/meson.build
@@ -37,4 +37,4 @@ subdir('usr/share')
 subdir('usr/var/www')
 subdir('etc/callblocker')
 subdir('etc/systemd/system')
-subdir('test/callblockerd')
+subdir('tests/callblockerd')
