--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -1,6 +1,12 @@
 name: Debian
 
-on: [push]
+on:
+  push:
+    branches:    
+      - master
+      - 'releases/**'
+    tags:        
+      - v*
 
 jobs:
   build:
